--- a/src/main/resources/templates/matches/matches.html
+++ b/src/main/resources/templates/matches/matches.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Matches</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <style>
+        img {
+            position: relative;
+            width: 4rem;
+            height: 4rem;
+        }
+    </style>
+
 </head>
 <body>
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img src="/navbar.PNG" class="d-inline-block align-top" alt="" th:src="@{/images/navbar.PNG}">
+        Sports Buddy
+    </a>
+        <p style="position: relative; right: 200px;" th:text="${mainUser.getName()}">Logged as </p>
+</nav>
+<div class="container my-2">
+    <div class="card">
+        <div class="card-body">
+            <div th:switch="${matches}" class="container my-5">
+                <p class="my-5">
+                    <a href="/create-match" class="btn btn-primary"><i
+                            class="fas fa-user-plus ml-2"> Create a new match</i></a>
+                </p>
+                <div class="col-md-10">
+                    <h2 th:case="null">No matches!</h2>
+                    <div th:case="*">
+                        <table class="table table-striped table-responsive-md">
+                            <thead>
+                            <tr>
+                                <th>Sport</th>
+                                <th>Owner</th>
+                                <th>Date</th>
+                                <th>Hour</th>
+                                <th>Location</th>
+                                <th>Details</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="match : ${matches}">
+                                <td th:text="${match.sport}"></td>
+                                <td th:text="${match.owner}"></td>
+                                <td th:text="${match.date}"></td>
+                                <td th:text="${match.hour}"></td>
+                                <td th:text="${match.location}"></td>
+                                <td><a th:href="@{/matches/match_details/{id}(id=${match.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
+<!--                                <td><a th:href="@{/students/delete/{id}(id=${match.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>-->
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
