--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Register</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <style>
+        img {
+            position: relative;
+            width: 4rem;
+            height: 4rem;
+        }
+    </style>
+
 </head>
 <body>
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img src="../static/images/navbar.PNG" class="d-inline-block align-top" alt="" th:src="@{/images/navbar.PNG}">
+        Sports Buddy
+    </a>
+</nav>
+<div class="container my-4">
 
+    <div class="col-md-8">
+            <h3> Register </h3>
+            <div class="card">
+                <div class="card-body">
+                    <div class="col-md-12">
+                        <form action="#" th:action="@{/register}" th:object="${user}" method="post">
+                            <div class="row">
+                                <div class="form-group col-md-8">
+                                    <label for="name" class="col-form-label">Username</label>
+                                    <input type="text" autocomplete="off" th:field="*{username}" class="form-control" id="username">
+                                    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-8">
+                                    <label for="password" class="col-form-label">Password</label>
+                                    <input type="password" autocomplete="off" th:field="*{password}" class="form-control" id="password">
+                                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-8">
+                                    <label for="name" class="col-form-label">Name</label>
+                                    <input type="text" autocomplete="off" th:field="*{name}" class="form-control" id="name">
+                                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-8">
+                                    <label for="email" class="col-form-label">Email</label>
+                                    <input type="text" autocomplete="off" th:field="*{email}" class="form-control" id="email">
+                                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group col-md-8">
+                                    <p></p>
+                                    Sports that I play:
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="soccer">
+                                        <label class="form-check-label" for="soccer">
+                                            Soccer
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="basketball">
+                                        <label class="form-check-label" for="basketball">
+                                            Basketball
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="volleyball">
+                                        <label class="form-check-label" for="volleyball">
+                                            Volleyball
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <p></p>
+                                    <input type="submit" href="register" class="btn btn-primary" value="Register">
+                                </div>
+                            </div>
+                        </form>
+                        <div th:if="${account.feedback} == true">
+                            <div th:if="${account.getPosition()} == 1">
+                                <div class="alert alert-danger" role="alert" >
+                                    <p></p>
+                                    <p5 th:text="${account.getMessage()}">Error creating account.</p5>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+
+    </div>
+
+</div>
 </body>
 </html>
