--- a/src/main/resources/templates/matches/matches.html
+++ b/src/main/resources/templates/matches/matches.html
@@ -13,9 +13,12 @@
             width: 4rem;
             height: 4rem;
         }
-        li {
+        #log {
             position: relative;
             right: 50px;
+        }
+        #username {
+            font-style: italic;
         }
     </style>
 
@@ -29,18 +32,21 @@
         <img src="/navbar.PNG" class="d-inline-block align-top" alt="" th:src="@{/images/navbar.PNG}">
         Sports Buddy
     </a>
-    <li class="nav-item">
+    <div id="log">
         Logged as:
-        <p2 th:text="${mainUser.getName()}">Name</p2>
-        <a class="nav-link" href="logout">Log out</a>
-    </li>
+        <a id="username" th:text="${mainUser.getName()}">Name</a>
+        <li class="nav">
+            <a class="nav-link" href="logout">Log out</a>
+        </li>
+    </div>
+
 </nav>
 <div class="container my-2">
     <div class="card">
         <div class="card-body">
             <div th:switch="${matches}" class="container my-5">
                 <p class="my-5">
-                    <a href="/create-match" class="btn btn-primary"><i
+                    <a href="/matches/create_match_page" class="btn btn-primary"><i
                             class="fas fa-user-plus ml-2"> Create a new match</i></a>
                 </p>
                 <div class="col-md-10">
@@ -49,21 +55,22 @@
                         <table class="table table-striped table-responsive-md">
                             <thead>
                             <tr>
+                                <th>Name</th>
                                 <th>Sport</th>
-                                <th>Owner</th>
+                                <th>Participants</th>
                                 <th>Date</th>
                                 <th>Hour</th>
                                 <th>Location</th>
-                                <th>Details</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr th:each="match : ${matches}">
-                                <td th:text="${match.sport}"></td>
-                                <td th:text="${match.owner}"></td>
-                                <td th:text="${match.date}"></td>
-                                <td th:text="${match.hour}"></td>
-                                <td th:text="${match.location}"></td>
+                                <td th:text="${match.getName()}"></td>
+                                <td th:text="${match.getSports().sportSelected()}"></td>
+                                <td th:text="${match.getNumberOfParticipants()}"></td>
+                                <td th:text="${match.getDate()}"></td>
+                                <td th:text="${match.getHour()}"></td>
+                                <td th:text="${match.getLocation}"></td>
                                 <td><a th:href="@{/matches/match_details/{id}(id=${match.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
 <!--                                <td><a th:href="@{/students/delete/{id}(id=${match.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>-->
                             </tr>
