--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,6 @@
     </a>
 </nav>
 <div class="container my-4">
-
     <div class="col-md-8">
             <h3> Register </h3>
             <div class="card">
@@ -38,43 +37,58 @@
                                 <div class="form-group col-md-8">
                                     <label for="name" class="col-form-label">Username</label>
                                     <input type="text" autocomplete="off" th:field="*{username}" class="form-control" id="username">
-                                    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger"></span>
                                 </div>
                                 <div class="form-group col-md-8">
                                     <label for="password" class="col-form-label">Password</label>
                                     <input type="password" autocomplete="off" th:field="*{password}" class="form-control" id="password">
-                                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
                                 </div>
                                 <div class="form-group col-md-8">
                                     <label for="name" class="col-form-label">Name</label>
                                     <input type="text" autocomplete="off" th:field="*{name}" class="form-control" id="name">
-                                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
                                 </div>
                                 <div class="form-group col-md-8">
                                     <label for="email" class="col-form-label">Email</label>
                                     <input type="text" autocomplete="off" th:field="*{email}" class="form-control" id="email">
-                                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
                                 </div>
-
-                                <div class="form-group col-md-8">
-                                    <p></p>
-                                    Sports that I play:
+                                <p></p>
+                                <p1>Sports that I like:</p1>
+                                <div class="form-group col-md-5">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="soccer">
+                                            <label class="form-check-label" for="soccer">
+                                                Soccer
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="basketball">
+                                            <label class="form-check-label" for="basketball">
+                                                Basketball
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="volleyball">
+                                            <label class="form-check-label" for="volleyball">
+                                                Volleyball
+                                            </label>
+                                        </div>
+                                </div>
+                                <div class="form-group col-md-5">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="soccer">
-                                        <label class="form-check-label" for="soccer">
-                                            Soccer
+                                        <input class="form-check-input" type="checkbox" value="" id="Tennis">
+                                        <label class="form-check-label" for="Tennis">
+                                            Tennis
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="basketball">
-                                        <label class="form-check-label" for="basketball">
-                                            Basketball
+                                        <input class="form-check-input" type="checkbox" value="" id="Table Tennis">
+                                        <label class="form-check-label" for="Table Tennis">
+                                            Table Tennis
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="volleyball">
-                                        <label class="form-check-label" for="volleyball">
-                                            Volleyball
+                                        <input class="form-check-input" type="checkbox" value="" id="Baseball">
+                                        <label class="form-check-label" for="Baseball">
+                                            Baseball
                                         </label>
                                     </div>
                                 </div>
@@ -82,6 +96,8 @@
                                 <div class="col-md-6">
                                     <p></p>
                                     <input type="submit" href="register" class="btn btn-primary" value="Register">
+                                    <input type="button" href="index" class="btn btn-secondary" value="Back to login">
+
                                 </div>
                             </div>
                         </form>
