--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -95,8 +95,8 @@
 
                                 <div class="col-md-6">
                                     <p></p>
-                                    <input type="submit" href="register" class="btn btn-primary" value="Register">
-                                    <input type="button" href="index" class="btn btn-secondary" value="Back to login">
+                                    <input type="submit" href="register" class="btn btn-primary" value="Register"></input>
+                                    <a type="button" href="index" class="btn btn-secondary" value="Back to login">Back to login</a>
 
                                 </div>
                             </div>
