Fixed some bugs.
1 - Login different usernames with same passwords.
2 - MatchController now redirecting correctly.

--- a/src/main/resources/templates/matches/matches.html
+++ b/src/main/resources/templates/matches/matches.html
@@ -46,7 +46,7 @@
         <div class="card-body">
             <div th:switch="${matches}" class="container my-5">
                 <p class="my-5">
-                    <a href="create_match_page" class="btn btn-primary"><i
+                    <a href="/matches/create_match_page" class="btn btn-primary"><i
                             class="fas fa-user-plus ml-2"> Create a new match</i></a>
                 </p>
                 <div class="col-md-12">
