Worked on login and registration validations. Next to be done in matches.

--- a/src/main/resources/templates/matches/match_creation.html
+++ b/src/main/resources/templates/matches/match_creation.html
@@ -41,7 +41,7 @@
     </a>
     <div id="log">
         Logged in as:
-        <a id="username" th:text="${mainUser.getUsername()}">Name</a>
+        <a id="username" th:text="${mainUser.getName()}">Name</a>
         <li class="nav">
             <a class="nav-link" href="#" th:href="@{/logout}">Log out</a>
         </li>
