Fixed 'LoginAccess' word in the login template Closes #20

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         <div class="col-md-5">
             <p></p>
             <h1>Welcome to Sports Buddy</h1>
-            <p2>Please loginAccess or register</p2>
+            <p2>Please login or register</p2>
             <p> </p>
             <form action="#" th:action="@{/login}" th:object="${login}" method="post">
                 <div class="form-group">
