--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -116,7 +116,7 @@
                                 <div class="col-md-6">
                                     <p></p>
                                     <input type="submit" href="register" class="btn btn-primary" value="Register"></input>
-                                    <a type="button" href="index" class="btn btn-secondary" value="Back to loginAccess">Back to loginAccess</a>
+                                    <a type="button" href="index" class="btn btn-secondary" value="Back to login page">Back to login page</a>
 
                                 </div>
                             </div>
